# quickjs-windows

./: CMakeLists.txt  build.bat  build_cmake.bat  cutils.c  cutils.h  gettimeofday.c  libregexp.c  libunicode.c  qjs.c  qjsc.c  quickjs-libc.c  quickjs.c  quickjs.h  sys_time.h
examples/: fib.c  point.c
sys/: time.h
